# kenshu

./: pyproject.toml
todo_project/: README.md  db.sqlite3
todo_project/frontend/my-app/: package-lock.json
todo_project/frontend/my-app/src/: App.css  App.tsx  index.css  main.tsx  type.ts
todo_project/frontend/my-app/src/components/: SearchBar.tsx  TodoDetail.tsx  TodoForm.tsx  TodoList.tsx
todo_project/frontend/my-app/src/componets/: globals.css
todo_project/my-app/: package-lock.json  package.json
todo_project/my-app/src/: App.js
todo_project/my-app/src/components/: Modal.js
todo_project/todo_app/: models.py  serializers.py  urls.py  views.py
todo_project/todo_app/migrations/: 0001_initial.py
todo_project/todo_app/templates/: index.html  react-app.html
todo_project/todo_project/: settings.py
